[gd_scene load_steps=6 format=3 uid="uid://be1fxoeageef8"]

[ext_resource type="PackedScene" uid="uid://1nlrcogbuus8" path="res://scenes/enemies/baseEnemy.tscn" id="1_huip8"]
[ext_resource type="Script" path="res://scripts/beamfighter.gd" id="2_l42ck"]
[ext_resource type="PackedScene" uid="uid://ds554i8vvh2y1" path="res://assets/models/beamship.glb" id="3_p34hn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ivppm"]
size = Vector3(1.89153, 1.85306, 3.06584)

[sub_resource type="BoxShape3D" id="BoxShape3D_sp4wa"]
size = Vector3(1.892, 1.853, 5.86499)

[node name="BeamFighter" instance=ExtResource("1_huip8")]
collision_layer = 0
script = ExtResource("2_l42ck")
void_value = 10
enemy_type = "Beam_Fighter"

[node name="beamship" parent="." index="0" instance=ExtResource("3_p34hn")]
transform = Transform3D(-1.5299e-08, 0, 0.35, 0, 0.35, 0, -0.35, 0, -1.5299e-08, 0.00659132, -0.257065, 0)

[node name="CollisionShape3D" parent="." index="1"]
shape = SubResource("BoxShape3D_ivppm")

[node name="HullComponent" parent="." index="2"]
max_hull = 100

[node name="CollisionShape3D2" parent="HitboxComponent" index="1"]
shape = SubResource("BoxShape3D_sp4wa")

[node name="FireDetection" type="RayCast3D" parent="." index="5"]
target_position = Vector3(50, 0, 0)
collide_with_areas = true

[node name="CenterMuzzle" type="Marker3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.46646, -0.242096, 0)

[node name="FireCooldown" type="Timer" parent="." index="7"]
wait_time = 4.0
one_shot = true
autostart = true

[node name="ShotCooldown" type="Timer" parent="." index="8"]
wait_time = 0.05
one_shot = true

[node name="VisibleOnScreenNotifier3D" parent="." index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 0, 0)
